# maliput_geopackage

./: CMakeLists.txt  LICENSE  README.md  package.xml
docs/: geopackage_schema.md  partial_loading.md  sampled_backend_comparison.md
examples/: CMakeLists.txt  geopackage_query_example.cc
include/maliput_geopackage/builder/: params.h  road_network_builder.h
resources/: t_shape_road.gpkg  two_lane_road.gpkg
src/maliput_geopackage/builder/: builder_configuration.cc  builder_configuration.h  road_network_builder.cc
src/maliput_geopackage/geopackage/: CMakeLists.txt  geopackage_parser.cc  geopackage_parser.h  wkt_parser.cc  wkt_parser.h
src/maliput_geopackage/plugin/: road_network.cc
src/plugin/: road_network.cc
test/: CMakeLists.txt  geopackage_parser_test.cc  wkt_parser_test.cc
test/plugin/: CMakeLists.txt  road_network_plugin_test.cc
test/resources/: generate_test_gpkg.py  generate_tshape_gpkg.py  t_shape_road.gpkg  two_lane_road.gpkg
